// Copyright Â© 2016 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/TheThingsNetwork/ttn/api/api.proto";
import "github.com/TheThingsNetwork/ttn/api/protocol/protocol.proto";
import "github.com/TheThingsNetwork/ttn/api/gateway/gateway.proto";

package broker;

message DownlinkOption {
  string  identifier  = 1;
  string  gateway_id  = 2;
  uint32  score       = 3; // lower is better, 0 is best
  int64   deadline    = 4; // deadline time at server represented as the number of nanoseconds elapsed since January 1, 1970 UTC
  protocol.TxConfiguration protocol_config = 5;
  gateway.TxConfiguration  gateway_config = 6;
}

// received from the Router
message UplinkMessage {
  bytes                    payload            = 1;
  // NOTE: For LoRaWAN, the Router doesn't know the DevEUI/ID and AppEUI/ID
  bytes                    dev_eui            = 11 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes                    app_eui            = 12 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  string                   app_id             = 13;
  string                   dev_id             = 14;
  protocol.RxMetadata      protocol_metadata  = 21;
  gateway.RxMetadata       gateway_metadata   = 22;
  repeated DownlinkOption  downlink_options   = 31;
}

// received from the Handler, sent to the Router, used as Template
message DownlinkMessage {
  bytes           payload          = 1;
  bytes           dev_eui          = 11 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes           app_eui          = 12 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  string          app_id           = 13;
  string          dev_id           = 14;
  DownlinkOption  downlink_option  = 21;
}

//sent to the Router, used as Template
message DeviceActivationResponse {
  bytes           payload          = 1;
  DownlinkOption  downlink_option  = 11;
}

// sent to the Handler
message DeduplicatedUplinkMessage {
  bytes                       payload            = 1;
  bytes                       dev_eui            = 11 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes                       app_eui            = 12 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  string                      app_id             = 13;
  string                      dev_id             = 14;
  protocol.RxMetadata         protocol_metadata  = 21;
  repeated gateway.RxMetadata gateway_metadata   = 22;
  int64                       server_time        = 23;
  DownlinkMessage             response_template  = 31;
}

// received from the Router
message DeviceActivationRequest {
  bytes                        payload              = 1;
  bytes                        dev_eui              = 11 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes                        app_eui              = 12 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  protocol.RxMetadata          protocol_metadata    = 21;
  gateway.RxMetadata           gateway_metadata     = 22;
  protocol.ActivationMetadata  activation_metadata  = 23;
  repeated DownlinkOption      downlink_options     = 31;
}

// sent to the Handler
message DeduplicatedDeviceActivationRequest {
  bytes                        payload              = 1;
  bytes                        dev_eui              = 11 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes                        app_eui              = 12 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  string                       app_id               = 13;
  string                       dev_id               = 14;
  protocol.RxMetadata          protocol_metadata    = 21;
  repeated gateway.RxMetadata  gateway_metadata     = 22;
  protocol.ActivationMetadata  activation_metadata  = 23;
  int64                        server_time          = 24;
  DeviceActivationResponse     response_template    = 31;
}

message ActivationChallengeRequest {
  bytes                        payload              = 1;
  bytes                        dev_eui              = 11 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes                        app_eui              = 12 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  string                       app_id               = 13;
  string                       dev_id               = 14;
}

message ActivationChallengeResponse {
  bytes payload = 1;
}

// message SubscribeRequest is used by a Handler to subscribe to uplink messages
message SubscribeRequest {}

// The Broker service provides pure network functionality
service Broker {
  // Router initiates an Association with the Broker.
  rpc Associate(stream UplinkMessage) returns (stream DownlinkMessage);

  // Handler subscribes to uplink stream.
  rpc Subscribe(SubscribeRequest) returns (stream DeduplicatedUplinkMessage);

  // Handler initiates downlink stream.
  rpc Publish(stream DownlinkMessage) returns (google.protobuf.Empty);

  // Router requests device activation
  rpc Activate(DeviceActivationRequest) returns (DeviceActivationResponse);
}

// message StatusRequest is used to request the status of this Broker
message StatusRequest {}

// message Status is the response to the StatusRequest
message Status {
  // Uplink
  api.Rates uplink        = 1;
  api.Rates uplink_unique = 2;

  // Downlink
  api.Rates downlink = 11;

  // Activations
  api.Rates activations          = 21;
  api.Rates activations_unique   = 22;
  api.Rates activations_accepted = 23;

  // Deduplication histogram percentiles
  api.Percentiles deduplication = 31;

  // Connections
  uint32  connected_routers  = 41;
  uint32  connected_handlers = 42;
}

message ApplicationHandlerRegistration {
  string app_id      = 1;
  string handler_id  = 2;
}

// The BrokerManager service provides configuration and monitoring functionality
service BrokerManager {
  // Handler announces new application to Broker
  rpc  RegisterApplicationHandler(ApplicationHandlerRegistration) returns (google.protobuf.Empty);
  // Network operator requests Broker status
  rpc  GetStatus(StatusRequest) returns (Status);
}
